# codebreaker

./: .gitignore  README.md  app.py  game_logic.py  multiplayer_logic.py  requirements.txt
backend/: pyproject.toml  requirements.txt
backend/app/: main.py  socket_manager.py
backend/app/models/: game.py
backend/app/services/: game_service.py  multiplayer_service.py
backend/tests/: test_chat.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/multiplayer/: page.tsx
frontend/src/app/multiplayer/[roomId]/: page.tsx
frontend/src/app/multiplayer/full/: page.tsx
frontend/src/components/game/: ChatPanel.tsx  SharedGameUI.tsx
frontend/src/components/ui/: LoadingOverlay.tsx
frontend/src/hooks/: useSocket.ts
frontend/src/lib/: api.ts
frontend/src/store/: useChatStore.ts  useGameStore.ts
static/css/: style.css
static/js/: script.js
templates/: expert.html  game.html  index.html  insane.html  lobby.html  master.html  multiplayer_game.html  multiplayer_setup.html  result.html  rookie.html  room_full.html  standard.html
