[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.14"
dependencies = [
    "fastapi>=0.135.1",
    "gevent>=25.9.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-socketio>=5.16.1",
    "redis>=7.3.0",
    "slowapi>=0.1.9",
    "uvicorn>=0.41.0",
]
